idea/testData/checker/codeFragments/classHeaderWithTypeArguments.kt.fragment
this.foo(<error descr="[TYPE_MISMATCH] Type mismatch: inferred type is String but T was expected">"a"</error>)